--- a/public/templates/archives.html
+++ b/public/templates/archives.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
 	<div class="row">
-		<div ng-repeat="comic in comics track by $index" class="col-md-4">
-			<div class="well">
+		<div  ng-repeat="comic in comics track by $index" class="col-md-4">
+			<div ng-click="openComic(comic)" class="well">
 	  		<div class="container">
     			<h4>
     				{{comic.safe_title}}
@@ -10,4 +10,21 @@
 			</div>
 		</div>					
 	</div>
+</div>
+
+<div id="comicModal" class="modal fade">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title">{{comic.safe_title}}</h4>
+            </div>
+            <div class="modal-body">
+                <img ng-src="{{comic.img}}" alt="{{comic.alt}}" title="{{comic.alt}}"/>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
 </div>
