--- a/views/layout.jade
+++ b/views/layout.jade
@@ -36,5 +36,6 @@ html(ng-app="xkcdApp")
         script(type='text/javascript', src='/javascripts/angular-animate.min.js')
         script(type='text/javascript', src='/javascripts/angular-route.min.js')
         script(type='text/javascript', src='/javascripts/angular-resource.min.js')
+        script(type='text/javascript', src='/javascripts/ng-infinite-scroll.min.js')
         script(type='text/javascript', src='/javascripts/xkcdApp.js')
 
