--- a/public/templates/archives.html
+++ b/public/templates/archives.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
-	<div class="row">
-		<div  ng-repeat="comic in comics track by $index" class="col-md-4">
+	<div class="row"  infinite-scroll='fetch()' infinite-scroll-distance='3'>
+		<div  ng-repeat="comic in comics track by $index" class="col-md-4 comicDiv">
 			<div ng-click="openComic(comic)" class="well">
 	  		<div class="container">
     			<h4>
