Added about page.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -28,6 +28,9 @@ html(ng-app="xkcdApp")
                         li(class="{{active ? 'active' : ''}}")
                             a(href="#/archives")
                                 |Archives
+                        li(class="{{active ? 'active' : ''}}")
+                            a(href="#/about")
+                                |About
         div(ng-view)                        
         block content
         script(type='text/javascript', src='/javascripts/jquery-1.11.2.min.js')
